[gd_scene load_steps=4 format=3 uid="uid://dtmg7gotwuvu7"]

[ext_resource type="FontFile" uid="uid://dgj6kbvxj2hu4" path="res://fonts/pixel.ttf" id="1_257i2"]
[ext_resource type="Script" uid="uid://cej65na2jq1w8" path="res://scripts/modal_empress.gd" id="1_lhihe"]
[ext_resource type="Texture2D" uid="uid://capl0uorijgxd" path="res://gfx/ui/menu_button.png" id="2_lhihe"]

[node name="Modal" type="Node2D"]
script = ExtResource("1_lhihe")

[node name="CharTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05

[node name="BlackBackground" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 0.65882355)

[node name="ModalContent" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(100, 65)

[node name="WhitePopup" type="ColorRect" parent="ModalContent"]
modulate = Color(1, 1, 1, 0.6392157)
offset_right = 130.0
offset_bottom = 57.0
metadata/_edit_use_anchors_ = true

[node name="EmpressText" type="Label" parent="ModalContent"]
unique_name_in_owner = true
offset_left = 6.5
offset_top = 1.0
offset_right = 99.5
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("1_257i2")
theme_override_font_sizes/font_size = 6
text = "YOU STILL HAVE A LOT
TO LEARN TO BECOME
A FIREWORKS MASTER"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="ModalContent"]
position = Vector2(66, 19)
texture = ExtResource("2_lhihe")

[node name="BackToTitle" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 87.0
offset_top = 124.0
offset_right = 235.0
offset_bottom = 147.0
theme_override_fonts/font = ExtResource("1_257i2")
theme_override_font_sizes/font_size = 6
text = "Press any Key or Button to restart"

[connection signal="timeout" from="CharTimer" to="." method="_on_char_timer_timeout"]
